Modal de dados com o ano selecionado

--- a/consulta-transferencia-tesouro/src/main/webapp/index.html
+++ b/consulta-transferencia-tesouro/src/main/webapp/index.html
@@ -70,8 +70,7 @@ select {
 			<div class="row">
 				<i> Para mais detalhes sobre os repasses federais, veja a
 					aplicação <a href="http://repasse.ufabc.edu.br/">Repasse</a>
-				</i> <br />
-				<br />
+				</i> <br /> <br />
 				<form class="form-inline">
 					<div class="input-group">
 						<span class="input-group-addon" id="estadoLbl">Estado </span> <select
@@ -100,7 +99,6 @@ select {
 			<div class="row">
 				<div id="grafico"></div>
 			</div>
-
 		</div>
 
 	</section>
@@ -142,6 +140,34 @@ select {
 			</div>
 		</div>
 	</section>
+	
+	<!-- modal com os dados selecionados -->
+	<div class="modal fade" tabindex="-1" role="dialog" id="modalDadosSelecionados">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Transferências no ano {{dadosAnoSelecionado[0].ano}} do fundo {{dadosAnoSelecionado[0].tipo}} para {{municipio.nome}}</h4>
+      </div>
+      <div class="modal-body">
+					
+					<table class="table">
+						<thead>
+							<tr>
+								<th>Mês</th>
+								<th>Valor</th>
+							</tr>
+
+						</thead>
+						<tr ng-repeat="t in dadosAnoSelecionado">
+							<td>{{ t.mes }}</td>
+							<td>R$ {{ t.valor.toLocaleString() }}</td>
+						</tr>
+					</table>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 	<footer class="footer">
 		<div class="container">
